--- a/sopkathon/package.json
+++ b/sopkathon/package.json
@@ -13,7 +13,8 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "styled-reset": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
