--- a/sopkathon/package.json
+++ b/sopkathon/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "prettier": "^3.2.5",
     "styled-components": "^6.1.11",
     "vite": "^5.2.0",
     "vite-plugin-svgr": "^4.2.0"
